# muski-vml

./: .env.secret.template  .env.shared  .env.template  .gitignore  README.md  abas.json  compose.yaml  pyproject.toml
config/: logging.dev.ini  logging.dev.yaml  logging.prod.ini  logging.prod.yaml
docs/: arch.drawio
docs/unusedcode/: named_tuple_from_json.py
muskivml/: logic.py  onloaders.py  usecases.py
tests/: named_tuple_from_json.py  test_ai_playlister.py  test_musikvml.py  test_offload.py  test_vml.py  utils.py
tests/json_test_data/: test.json
virtmulib/: __init__.py  __main__.py  logging.py  setup_app.py  usecases.py  vml_logging.py
virtmulib/#/: adapters.py  frameworks_drivers.py
virtmulib/adapters/: cli.py
virtmulib/applogic/: __init__.py  adapter.py  gateway.py  interface.py  program_flow.py  usecases.py
virtmulib/applogic/ai_playlister/: __init__.py  ai_playlister.py  llm-setup  llm-setup-short
virtmulib/applogic/offload/: search_utils.py  spotify.py
virtmulib/applogic/onload/: __init__.py  abstract.py  adapter.py  gateway.py  interface.py  models.py  onload.py  onload_spotify.py  spotify.py
virtmulib/applogic/onloader/: __init__.py  onloader.py  spotify_onloader.py  spotify_onloader_old.py  spotify_onloader_old_old.py
virtmulib/applogic/program_state/: __init__.py
virtmulib/entities/: __init__.py  entities-new.py  entities.py  helloworld_pydantic_mongo_demo.py  misc_definitions.py  models.py  py_object_id.py  utils.py
virtmulib/entities/_misc/: entities_old.py  helloworld_pydantic_mongo_demo.py
virtmulib/frameworks_drivers/: __init__.py  firebase.py  interface.py
