[tool.poetry]
name = "virtmulib"
version = "0.1.0"
description = "A virtual music library"
authors = ["Nasr Kasrin <n42r.me@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
pydantic = "^2.5.2"
pymongo = "^4.6.1"


[tool.poetry.group.dev.dependencies]
email-validator = "^2.1.0.post1"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
