[tool.poetry]
name = "virtmulib"
version = "0.1.0"
description = "A virtual music library"
authors = ["Nasr Kasrin <n42r.me@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
pydantic = "^2.5.2"
pymongo = "^4.6.1"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
email-validator = "^2.1.0.post1"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pylint = "^3.0.2"
black = "^23.11.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
