[tool.poetry]
name = "virtmulib"
version = "0.1.0"
description = "A virtual music library"
authors = ["Nasr Kasrin <n42r.me@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.23.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
pymongo = "^4.6.1"
flake8 = "^6.1.0"
attrs = "^23.1.0"
unidecode = "^1.3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pylint = "^3.0.2"
black = "^23.11.0"
mypy = "^1.7.1"

[tool.pytest.ini_options]
markers = ["e2e: marks tests as e2e (deselect with '-m \"not e2e\"')"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
